Display correctly on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@
 .navbar-right {
   /*background-color: #ed1c24;*/
   background-color: #98A4AE;
-  padding: 0.6rem;
+  padding: 0.7rem;
 }
 
 .navbar-dark .navbar-right > li > a:hover,
